@@ -126,7 +126,6 @@ install:
   - brew install brewsci/bio/masurca
   - brew install poa
   - brew install samtools
-  - brew install seqtk
   - brew install sickle
   - brew install wang-q/tap/faops
   - brew install wang-q/tap/jrange
